no commit message

--- a/Languages/Go/go_cli.cli.txt
+++ b/Languages/Go/go_cli.cli.txt
@@ -506,10 +506,13 @@ ENVVAR GONOSUMDB                  #MODULE_PATHS that should not use GOSUMDB
                                              \=+===============================+=/
 
 
-go build FILE.go                  #Compile FILE.go to executable FILE
-go build [DIR]                    #Compile DIR/*.go to executable DIRNAME
-                                  #Must all be from same PACKAGE
-                                  #Def DIR: .
+go build IMPORT_PATHS             #Compile *.go main PACKAGE to BINARY
+                                  #Executable name is:
+                                  #  - if argument is FILE.go..., first FILE name
+                                  #  - if module-aware, MODULE_PATH last part
+                                  #  - otherwise, DIR name
+                                  #Ignore *_test.go
+                                  #Always ignored: .*.go, _*.go, testdata/**.go
 
 ENVVAR GOCACHE                    #Cache directory for go build
                                   #Def: CACHE_DIR/go-build (CACHE_DIR is ~/.cache on Linux)
