--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -7,8 +7,10 @@
 TODO:
   - commands:
      - https://golang.org/cmd/go, only the go * command upper part
-     - https://golang.org/cmd/go/#hdr-Build_modes
      - https://golang.org/cmd/
+        - after doing go tool asm: move doc of go build -asmflags|toolexec
+        - after doing go tool compile: move doc of go build -gcflags
+        - after doing go tool link: move doc of go build -ldflags
      - https://golang.org/doc/cmd
      - all go CMD
      - all go* executable
