--- a/Languages/Go/go_standard_library.go.txt
+++ b/Languages/Go/go_standard_library.go.txt
@@ -12,7 +12,7 @@ LANGUAGE SPEC ==>                 #The following are part of the language spec, 
                                   #  - runtime.Error
 
 DOCUMENTED ELSEWHERE ==>          #In go CLI:
-                                  #  - runtime.GOOS|GOARCH
+                                  #  - runtime.GOOS|GOARCH|Compiler
 
 
                                              /=+===============================+=\
