no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -2545,6 +2545,7 @@ execPath                                        #Absolute path of node executabl
 env                                             #Environment variables, as OBJ. Values are strings.
                                                 #Case-insensitive on Windows.
 title                                           #Process title displayed in ps. Read/write. Usually short max length.
+                                                #Cannot set to smaller length than the initial value
 --title STR                                     #Set PROCESS.title
 
 cwd()->'DIR'                                    #Current directory
