--- a/Languages/Static_analysis/General/JavaScript/globals.json.txt
+++ b/Languages/Static_analysis/General/JavaScript/globals.json.txt
@@ -5,13 +5,14 @@
 
 
 
-VERSION ==>                       #13.1.0
+VERSION ==>                       #13.2.0
 
 GLOBALS                           #Each property has an OBJ with all global properties.
                                   #Values are BOOL, false means "readonly"
 
-GLOBALS.builtin                   #ES5+ES6
-GLOBALS.es5|es2015|es2017         #
+GLOBALS.builtin                   #Same as es2021
+GLOBALS.es5|es2015|es2017|es2020|
+ es2021                           #
 GLOBALS.browser|node[Builtin]|
  shared-node-browser              #
 GLOBALS.worker|serviceworker|
