no commit message

--- a/Languages/Static_analysis/Duplicated_code/JavaScript/jscpd.node_cli.txt
+++ b/Languages/Static_analysis/Duplicated_code/JavaScript/jscpd.node_cli.txt
@@ -9,10 +9,8 @@ ALTERNATIVES ==>                  #  - jscpd (prefered): multi-languages
                                   #  - jsinspect: JavaScript-only, does not always work correctly
                                   #  - synt: less options, TypeScript-oriented, less popular
 
-VERSION ==>                       #3.2.1
-
 GOAL ==>                          #Detect code duplication:
-                                  #  - tokenize with Prism.js
+                                  #  - tokenize with reprism
                                   #     - support many programming languages
                                   #     - including embedding, e.g. `<script>` in HTML
                                   #  - compare token types (not values/names)
@@ -31,42 +29,6 @@ CONF ==>                          #Can be:
                                   #  - CONF.config JSON_FILE
                                   #  - JSPCD.run(CONF)
                                   #  - jspcd --CONF_VAR CONF_VAL (dasherized)
-
-
-                                             /=+===============================+=\
-                                            /  :                               :  \
-                                            )==:            RUNNING            :==(
-                                            \  :_______________________________:  /
-                                             \=+===============================+=/
-
-
-jspcd FILE|DIR...                 #As CLI
-
-new Jscpd.JSCPD(CONF)->JSCPD      #As Node module.
-JSCPD.detect(STR, OPTS)           #OPTS:
- ->PROMISE_CLONE_ARR              #  - id STR (anything)
-                                  #  - format 'FORMAT'
-JSCPD.detectInFiles(FILE|DIR_ARR)
- ->PROMISE_CLONE_ARR              #Cannot use globbing
-
-JSCPD.on
- (MATCH_SOURCE_EVENT,FUNC(source))#Start reading a file
-JSCPD.on
- (CLONE_FOUND_EVENT, FUNC(CLONE)) #Found duplication
-JSCPD.on
- (SOURCE_SKIPPED_EVENT,FUNC(STAT))#File skipped because of CONF.min|maxLines|maxSize
-JSCPD.on
- (END_EVENT, FUNC(CLONE_ARR))     #Finished
-
-CLONE.format                      #'FORMAT'
-CLONE.isNew                       #BOOL
-CLONE.foundDate                   #DATE_NUM
-CLONE.duplicationA|B              #DUP
-DUP.sourceId                      #STR
-DUP.start|end.line|column         #NUM
-DUP.range                         #NUM_ARR
-DUP.fragment                      #STR
-DUP.blame.rev|author|date|line    #STR
 
 
 
@@ -128,7 +90,7 @@ CONF.threshold                    #NUM (0-100). Def: none
                                   #Exit code of 1 if duplicated lines percentage is above NUM
 CONF.mode                         #Can be:
                                   #  - strict
-                                  #  - mild: skip empty lines and empty symbols
+                                  #  - mild (def): skip empty lines and empty symbols
                                   #  - weak: skip empty lines, empty symbols and comments
 CONF.ignoreCase                   #BOOL (def: false). Ignore token case.
 
@@ -136,20 +98,13 @@ CONF.noSymlinks                   #BOOL (def: false). Do not follow symlinked di
 
 CONF.skipLocal                    #'DIR'_ARR. Only report duplicates between different DIRs
 
-CONF.storeOptions.NAME            #How intermediary values are stored. OBJ:
-                                  #  - type:
-                                  #     - 'memory':
-                                  #        - does not create intermediary .jscpd/ folder
-                                  #        - does not work with really huge repos
-                                  #     - 'files'
-                                  #     - 'level' (def): LevelDB, 33% slower
-                                  #  ('files', 'level')
-                                  #  - name STR (def: 'level'): filename
-                                  #  ('level')
-                                  #  - persist BOOL (def: false)
-                                  #NAME can be:
-                                  #  - '*'
-                                  #  - 'statistic' or 'hashes_FORMAT': different states using stores
+CONF.store                        #Can be:
+                                  #  - 'memory' (def):
+                                  #     - does not work with really huge repos
+                                  #  - 'leveldb':
+                                  #     - 33% slower
+                                  #     - creates intermediary .jscpd/ folder
+                                  #  - 'redis'
 
 
                                              /=+===============================+=\
@@ -161,3 +116,66 @@ CONF.storeOptions.NAME            #How intermediary values are stored. OBJ:
 
 JSCPD-BADGE-REPORTER ==>         ##Creates a badge with duplication percentage
                                  ##See its doc
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:              CLI              :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+jspcd FILE|DIR...                 #As CLI
+                                  #Version 3.3.3
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:         PROGRAMMATIC          :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+@jscpd/core                       #Version 3.3.1
+new Statistic([CONF])             #STATISTIC. Aggregates detection stats state
+
+new Detector(TOKENIZER, STORE,
+ STATISTIC[, CONF])               #
+DETECTOR.detect(FILE_ARR)         #Find duplicates
+ ->CLONE_ARR                      #Also trigger reporters
+CLONE.format                      #'FORMAT'
+CLONE.isNew                       #BOOL
+CLONE.foundDate                   #DATE_NUM
+CLONE.duplicationA|B              #DUP
+DUP.sourceId                      #STR
+DUP.start|end.line|column         #NUM
+DUP.range                         #NUM_ARR
+DUP.fragment                      #STR
+DUP.blame.rev|author|date|line    #STR
+
+new MemoryStore()                 #STORE
+
+@jscpd/leveldb-store              #Version 3.3.1
+new LevelDbStore()                #STORE
+
+@jscpd/redis-store                #Version 3.3.1
+new RedisStore()                  #STORE
+
+@jscpd/tokenizer                  #Version 3.3.1
+new Tokenizer()                   #
+TOKENIZER.generateMaps
+ ('ID', 'SOURCE', 'FORMAT'[,CONF])
+ ->TOKENS_ARR                     #
+TOKEN.format                      #'FORMAT'
+TOKEN.type                        #STR
+TOKEN.content                     #STR
+TOKEN.length                      #NUM
+
+@jscpd/finder                     #Version 3.3.3
+getFilesToDetect([CONF])->FILE_ARR#Retrieve list of files to check after applying
+                                  #CONF.path|ignore|absolute|noSymlinks|format|formatExts|maxSize|minLines|maxLines
+FILE.path                         #STR
+FILE.name                         #STR
+FILE.content                      #STR
+FILE.stats                        #FSSTAT
+FILE.dirent                       #OBJ: isBlockDevice(), etc. like FSSTAT.*
