no commit message

--- a/Languages/Static_analysis/Duplicated_code/JavaScript/jscpd.node_cli.txt
+++ b/Languages/Static_analysis/Duplicated_code/JavaScript/jscpd.node_cli.txt
@@ -126,6 +126,7 @@ JSCPD-BADGE-REPORTER ==>         ##Creates a badge with duplication percentage
 
 
 jspcd FILE|DIR...                 #As CLI
+                                  #No globbing
                                   #Version 3.3.3
 
 
