no commit message

--- a/Languages/Go/go_testing.go.txt
+++ b/Languages/Go/go_testing.go.txt
@@ -344,3 +344,139 @@ MEM_STATS.PauseEnd [256]UINT_64   #Unix timestamp (in ns) of the last 256 GC pau
 
 MEM_STATS.EnableGC BOOL           #Whether GC is enabled (def: true)
 MEM_STATS.DebugGC BOOL            #Always false
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:         CPU PROFILING         :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+gofmt|go test -cpuprofile FILE    #Does CPU profiling and outputs it in FILE
+                                  #CPU profiling shows duration spent in each function, as a tree
+                                  #  - uses random samples
+
+import "runtime/pprof"            #
+pprof.StartCPUProfile(WRITER)
+ ->ERROR|nil                      #Starts CPU profiling
+pprof.StopCPUProfile()            #Stops CPU profiling, and write output to WRITER
+
+go tool pprof [FORMAT] [BIN] FILE #Inspect a CPU profiling FILE
+                                  #BIN is the binary that produced the profiling FILE
+                                  #Def FORMAT: interactive mode
+
+-http [HOST[:PORT]]               #Visualize in browser
+
+  Output formats (select at most one):
+    -callgrind       Outputs a graph in callgrind format
+    -comments        Output all profile comments
+    -disasm          Output assembly listings annotated with samples
+    -dot             Outputs a graph in DOT format
+    -eog             Visualize graph through eog
+    -evince          Visualize graph through evince
+    -gif             Outputs a graph image in GIF format
+    -gv              Visualize graph through gv
+    -kcachegrind     Visualize report in KCachegrind
+    -list            Output annotated source for functions matching regexp
+    -pdf             Outputs a graph in PDF format
+    -peek            Output callers/callees of functions matching regexp
+    -png             Outputs a graph image in PNG format
+    -proto           Outputs the profile in compressed protobuf format
+    -ps              Outputs a graph in PS format
+    -raw             Outputs a text representation of the raw profile
+    -svg             Outputs a graph in SVG format
+    -tags            Outputs all tags in the profile
+    -text            Outputs top entries in text form
+    -top             Outputs top entries in text form
+    -topproto        Outputs top entries in compressed protobuf format
+    -traces          Outputs all profile samples in text form
+    -tree            Outputs a text rendering of call graph
+    -web             Visualize graph through web browser
+    -weblist         Display annotated source in a web browser
+
+  Options:
+    -call_tree       Create a context-sensitive call tree
+    -compact_labels  Show minimal headers
+    -divide_by       Ratio to divide all samples before visualization
+    -drop_negative   Ignore negative differences
+    -edgefraction    Hide edges below <f>*total
+    -focus           Restricts to samples going through a node matching regexp
+    -hide            Skips nodes matching regexp
+    -ignore          Skips paths going through any nodes matching regexp
+    -mean            Average sample value over first value (count)
+    -nodecount       Max number of nodes to show
+    -nodefraction    Hide nodes below <f>*total
+    -noinlines       Ignore inlines.
+    -normalize       Scales profile based on the base profile.
+    -output          Output filename for file-based outputs
+    -prune_from      Drops any functions below the matched frame.
+    -relative_percentages Show percentages relative to focused subgraph
+    -sample_index    Sample value to report (0-based index or name)
+    -show            Only show nodes matching regexp
+    -show_from       Drops functions above the highest matched frame.
+    -source_path     Search path for source files
+    -tagfocus        Restricts to samples with tags in range or matched by regexp
+    -taghide         Skip tags matching this regexp
+    -tagignore       Discard samples with tags in range or matched by regexp
+    -tagshow         Only consider tags matching this regexp
+    -trim            Honor nodefraction/edgefraction/nodecount defaults
+    -trim_path       Path to trim from source paths before search
+    -unit            Measurement units to display
+
+  Option groups (only set one per group):
+    cumulative
+      -cum             Sort entries based on cumulative weight
+      -flat            Sort entries based on own weight
+    granularity
+      -addresses       Aggregate at the address level.
+      -filefunctions   Aggregate at the function level.
+      -files           Aggregate at the file level.
+      -functions       Aggregate at the function level.
+      -lines           Aggregate at the source code line level.
+
+  Source options:
+    -seconds              Duration for time-based profile collection
+    -timeout              Timeout in seconds for profile collection
+    -buildid              Override build id for main binary
+    -add_comment          Free-form annotation to add to the profile
+                          Displayed on some reports or with pprof -comments
+    -diff_base source     Source of base profile for comparison
+    -base source          Source of base profile for profile subtraction
+    profile.pb.gz         Profile in compressed protobuf format
+    legacy_profile        Profile in legacy pprof format
+    http://host/profile   URL for profile handler to retrieve
+    -symbolize=           Controls source of symbol information
+      none                  Do not attempt symbolization
+      local                 Examine only local binaries
+      fastlocal             Only get function names from local binaries
+      remote                Do not examine local binaries
+      force                 Force re-symbolization
+    Binary                  Local path or build id of binary for symbolization
+    -tls_cert             TLS client certificate file for fetching profile and symbols
+    -tls_key              TLS private key file for fetching profile and symbols
+    -tls_ca               TLS CA certs file for fetching profile and symbols
+
+  Misc options:
+   -http              Provide web interface at host:port.
+                      Host is optional and 'localhost' by default.
+                      Port is optional and a randomly available port by default.
+   -no_browser        Skip opening a browser for the interactive web UI.
+   -tools             Search path for object tools
+
+  Legacy convenience options:
+   -inuse_space           Same as -sample_index=inuse_space
+   -inuse_objects         Same as -sample_index=inuse_objects
+   -alloc_space           Same as -sample_index=alloc_space
+   -alloc_objects         Same as -sample_index=alloc_objects
+   -total_delay           Same as -sample_index=delay
+   -contentions           Same as -sample_index=contentions
+   -mean_delay            Same as -mean -sample_index=delay
+
+  Environment Variables:
+   PPROF_TMPDIR       Location for saved profiles (default $HOME/pprof)
+   PPROF_TOOLS        Search path for object-level tools
+   PPROF_BINARY_PATH  Search path for local binary files
+                      default: $HOME/pprof/binaries
+                      searches $name, $path, $buildid/$name, $path/$buildid
+   * On Windows, %USERPROFILE% is used instead of $HOME
