no commit message

--- a/Languages/Go/go_testing.go.txt
+++ b/Languages/Go/go_testing.go.txt
@@ -354,8 +354,11 @@ MEM_STATS.DebugGC BOOL            #Always false
 
 
 gofmt|go test -cpuprofile FILE    #Does CPU profiling and outputs it in FILE
-                                  #CPU profiling shows duration spent in each function, as a tree
-                                  #  - uses random samples
+                                  #CPU profiling shows duration spent in each function, as a call tree
+                                  #Do it by using random samples, recording at regular interval which source line was hit
+                                  #  - including parents
+                                  #     - whole function stack is a "node", composed of several "frames"
+                                  #  - instrument each source line to know this
 
 import "runtime/pprof"            #
 pprof.StartCPUProfile(WRITER)
@@ -363,66 +366,80 @@ pprof.StartCPUProfile(WRITER)
 pprof.StopCPUProfile()            #Stops CPU profiling, and write output to WRITER
 
 go tool pprof [FORMAT] [BIN] FILE #Inspect a CPU profiling FILE
-                                  #BIN is the binary that produced the profiling FILE
+                                  #BIN is the binary that produced the profiling FILE, to find out source code
+                                  #  - automatically guessed
                                   #Def FORMAT: interactive mode
 
--http [HOST[:PORT]]               #Visualize in browser
+-http=HOST:PORT                   #Visualize all information, in browser
+-kcachegrind                      #Visualize all information, in kcachegrind program
 
-  Output formats (select at most one):
-    -callgrind       Outputs a graph in callgrind format
-    -comments        Output all profile comments
-    -disasm          Output assembly listings annotated with samples
-    -dot             Outputs a graph in DOT format
-    -eog             Visualize graph through eog
-    -evince          Visualize graph through evince
-    -gif             Outputs a graph image in GIF format
-    -gv              Visualize graph through gv
-    -kcachegrind     Visualize report in KCachegrind
-    -list            Output annotated source for functions matching regexp
-    -pdf             Outputs a graph in PDF format
-    -peek            Output callers/callees of functions matching regexp
-    -png             Outputs a graph image in PNG format
-    -proto           Outputs the profile in compressed protobuf format
-    -ps              Outputs a graph in PS format
-    -raw             Outputs a text representation of the raw profile
-    -svg             Outputs a graph in SVG format
-    -tags            Outputs all tags in the profile
-    -text            Outputs top entries in text form
-    -top             Outputs top entries in text form
-    -topproto        Outputs top entries in compressed protobuf format
-    -traces          Outputs all profile samples in text form
-    -tree            Outputs a text rendering of call graph
-    -web             Visualize graph through web browser
-    -weblist         Display annotated source in a web browser
+-web                              #Visualize graph through web browser
+-evince                           #Visualize graph through evince program
+-eog                              #Visualize graph through eog program
+-gv                               #Visualize graph through gv program
+
+-output=FILE                      #Where to output file
+-svg                              #Output graph as SVG
+-png                              #Output graph as PNG
+-pdf                              #Output graph as PDF
+-ps                               #Output graph as PostScript
+-gif                              #Output graph as GIF
+-dot                              #Output as DOT graph
+-callgrind                        #Outputs in callgrind format
+-proto                            #Output as protobuf
+
+-list=REGEXP                      #Prints source code of functions whose name match REGEXP, with duration of each line in left margin
+-weblist                          #Same but visualized in browser
+
+-tree                             #Print all functions with:
+                                  #  - both CPU duration, and number of samples|calls
+                                  #  - both absolute and percentage
+                                  #  - both including|excluding children ("cum|flat")
+-peek=REGEXP                      #Same as -tree but only functions whose name match REGEXP
+-text|-top                        #Like -tree but for the top entries
+-topproto                         #Like -top but as protobuf
+
+-traces                           #Prints list of samples:
+                                  #  - time duration
+                                  #  - which line of code was hit
+-raw                              #Prints list of samples:
+                                  #  - number of same samples
+                                  #  - time interval
+                                  #  - which line of code was hit
+
+-comments                         #Print profile comments
+-tags                             #Print profile tags
+
+-nodecount=NUM                    #Only show top NUM nodes
+
+-show|hide=REGEXP                 #Show|hide frames matching regexp
+                                  #Parent|children frames are still shown (unless those are all hidden)
+-focus|ignore=REGEXP              #Same but for nodes, i.e. also show|hide frames
+-show_from|prune_from=REGEXP      #Like -hide but for all frames above|below functions matching REGEXP
+-noinlines                        #Like -hide but for functions inlined by compiler
+
+-unit=UNIT                        #CPU duration unit among: year|month|day|second|millisecond|microsecond|nanosecond
+                                  #Def: millisecond
+-divide_by=NUM                    #Divide all CPU durations by NUM
 
   Options:
+    -trim            Honor nodefraction/edgefraction/nodecount defaults
+    -edgefraction    Hide edges below <f>*total
+    -nodefraction    Hide nodes below <f>*total
+
     -call_tree       Create a context-sensitive call tree
     -compact_labels  Show minimal headers
-    -divide_by       Ratio to divide all samples before visualization
     -drop_negative   Ignore negative differences
-    -edgefraction    Hide edges below <f>*total
-    -focus           Restricts to samples going through a node matching regexp
-    -hide            Skips nodes matching regexp
-    -ignore          Skips paths going through any nodes matching regexp
     -mean            Average sample value over first value (count)
-    -nodecount       Max number of nodes to show
-    -nodefraction    Hide nodes below <f>*total
-    -noinlines       Ignore inlines.
     -normalize       Scales profile based on the base profile.
-    -output          Output filename for file-based outputs
-    -prune_from      Drops any functions below the matched frame.
     -relative_percentages Show percentages relative to focused subgraph
     -sample_index    Sample value to report (0-based index or name)
-    -show            Only show nodes matching regexp
-    -show_from       Drops functions above the highest matched frame.
     -source_path     Search path for source files
     -tagfocus        Restricts to samples with tags in range or matched by regexp
     -taghide         Skip tags matching this regexp
     -tagignore       Discard samples with tags in range or matched by regexp
     -tagshow         Only consider tags matching this regexp
-    -trim            Honor nodefraction/edgefraction/nodecount defaults
     -trim_path       Path to trim from source paths before search
-    -unit            Measurement units to display
 
   Option groups (only set one per group):
     cumulative
