no commit message

--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -308,7 +308,7 @@ float32|64                        #TYPE with 32|64 bits
 
 [N...][.N...][e|E+|-N...]         #FLOAT
 0x[N...][.N...][p|P+|-N...]
-0X[N...][.N...][p|P+|-N...]       #Base 16
+0X[N...][.N...][p|P+|-N...]       #0x... * 2**N (0x... is base16, N is base 10)
 
 
                                              /=+===============================+=\
