no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -279,7 +279,7 @@ TYPEDETECT(VAL)->STR                           ##Returns:
                                              \=+===============================+=/
 
 
-NUM                                             #Always double-precision float
+NUM                                             #Always double-precision float (binary64)
                                                 #Can use TYPED_ARR for single-precision floats or 8|16|32-bits [u]ints
                                                 #Radix:
                                                 #  - NUM
@@ -1793,9 +1793,10 @@ Math.min|max(NUM...)                            #NaN if one NUM not a number. [-
 Math.abs(NUM)                                   #
 Math.sign(NUM)                                -|#Returns -|+ 0|1 or NaN
 
-Math.ceil|floor|round(NUM)                      #Upper|lowest|nearest round
-Math.trunc(NUM)                               -|#Closest to 0 round
-Math.fround(NUM)                              -|#Converts to single-precision float
+Math.ceil|floor(NUM)                            #Ceiling|flooring
+Math.trunc(NUM)                               -|#Truncation
+Math.round(NUM)                                 #Nearest round. Tie-breaking towards Infinity
+Math.fround(NUM)                              -|#Converts to single-precision float (binary32)
 
 Math.PI                                         #
 Math.E                                          #
